--- a/beamer_ISU_colors.tex
+++ b/beamer_ISU_colors.tex
@@ -30,13 +30,17 @@
 %  {\popQED\usebeamertemplate{proof end}}
 
 
-%% Table of Contents
+%% Show ToC slide before each section
 %\AtBeginSection[]
 %{
 %  \begin{frame}<beamer>{Outline}
 %    \tableofcontents[currentsection]
 %  \end{frame}
 %}
+
+% Colors for items in Table of Contents
+\setbeamercolor{section in toc}{fg=black}
+\setbeamercolor{subsection in toc}{fg=black}
 
 
 % Set up the title block and the block structure
