Modified itemize and enumerate item formats

--- a/beamer_ISU_colors.tex
+++ b/beamer_ISU_colors.tex
@@ -54,9 +54,9 @@
 % Adjust the itemizes and enumerates to be correct
 % See <path-to-TeX>/latex/beamer/base
 %	for the Beamer themes (particularly inner themes, .\themes\inner) for more info
-\setbeamertemplate{itemize item}{\scriptsize\raise1.25pt\hbox{\donotcoloroutermaths$\blacktriangleright$}}
-\setbeamertemplate{itemize subitem}{\tiny\raise1.5pt\hbox{\donotcoloroutermaths$\blacktriangleright$}}
-\setbeamertemplate{enumerate item}{\insertenumlabel)}
+\setbeamertemplate{itemize item}{\small\raise1.25pt\hbox{\donotcoloroutermaths$\blacktriangleright$}}
+\setbeamertemplate{itemize subitem}{\tiny\raise1.5pt\hbox{\donotcoloroutermaths$\blacksquare$}}
+\setbeamertemplate{enumerate item}{\textbf{\insertenumlabel)}}
 
 % Custom footer
 \setbeamertemplate{footline}{\hspace{1pt} \insertshortauthor \, (\insertshortinstitute) \hfill \insertframenumber \ of \inserttotalframenumber\phantom{/}}
